"""Branch Entity"""
from datetime import datetime
from app import db

class Branch(db.Model):
    __tablename__ = "branch"
    id = db.Column(db.BigInteger, primary_key=True, autoincrement=True)
    organization_id = db.Column(db.BigInteger, db.ForeignKey("organization.id"), nullable=False)
    city_id = db.Column(db.BigInteger, db.ForeignKey("city.id"), nullable=False)
    
    def __init__(self, organization_id, city_id):
        self.organization_id = organization_id
        self.city_id = city_id
    
    def to_dict(self):
        return {
            'id': str(self.id),
            'organization_id': str(self.organization_id),
            'city_id': str(self.city_id)
        }
